refactor: media 도메인 기타 컨벤션 정리
- RedisDataService: new ObjectMapper() → Spring Bean 주입
- TripImagesService.getTripImages(): @Transactional(readOnly = true) 추가
- MediaMetadataService.processAndSaveMetadataBatch(): @Transactional 추가
- MediaMetadataService: .collect(Collectors.toList()) → .toList() 통일
- MediaMetadataService: 미사용 @Value bucketName 필드 제거
- MediaProcessingService: 메서드 없는 빈 클래스 삭제 (호출처 0건)